# sh-crypt

./: .gitattributes  .gitignore  LICENSE  MANIFEST.in  Makefile  README.md  gen_setup.py  pyproject.toml  pytest.ini  requirements.txt  setup.py
.circleci/: config.yml
build_utils/: build.sh  conf_env.sh  gen-pyproject.sh  gen_setup.py  git-tag.sh  pyproject.toml.template
demo/: demo.py
sh_crypt/: __init__.py  crypt.py  gen_key.py  setup.py
sh_crypt/tests/: __init__.py  test_crypt.py  test_gen_key.py
